# minimal-zip-concept

./: .gitignore  AppxManifest.xml  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  build.rs
.github/workflows/: ci.yml  deploy-pages.yml  fuzz.yml  release.yml
benches/: compression_bench.rs
docs/: FORMAT_MZC1.md  FORMAT_MZC2_DRAFT.md  GITHUB_RELEASE_TESTING.md  IMPLEMENTATION_PLAN.md  MZC1_TO_MZC2_MIGRATION.md  MZC2_ALGORITHM_DESIGN.md  MZC2_TEST_PLAN.md  PROJECT_OVERVIEW.md  ROADMAP.md  RUST_LEARNING_GUIDE.md  TEST_PLAN.md  benchmark_results.md  index.html  latest_version.json  mzc.wasm  spec.md
examples/: benchmark.rs  shared_dictionary.rs  simple_compression.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs
installer/: register_sparse_package.ps1  resources.rc  setup.iss
installer/homebrew/: mzc.rb
installer/scoop/: mzc.json
prompts/: GOAL_1_INITIAL_IMPLEMENTATION.md  GOAL_2_STABILITY_AND_TESTS.md  GOAL_3_MZC2_DICTIONARY_PLAN.md
samples/: normal.mzc  normal.restored.txt  repeated.mzc  repeated.mzc2  repeated.txt
scripts/: verify-release.ps1
src/: ans.rs  archive.rs  checksum.rs  cli.rs  cm.rs  crypto.rs  deflate.rs  error.rs  filters.rs  format.rs  gui.rs  huffman.rs  inspect.rs  lib.rs  main.rs  recover.rs  rle.rs  wasm.rs
tests/: advanced_tests.rs  archive_tests.rs  format_tests.rs  property_tests.proptest-regressions  property_tests.rs  robustness_tests.rs  roundtrip_tests.rs
