[package]
name = "mzc"
version = "0.9.0"
edition = "2021"
authors = ["Antigravity"]
description = "Minimal Zip Concept — Advanced lossless compressor & archiver in Rust with LZ77, RLE, tANS, Context Mixing, SIMD, and a premium egui desktop GUI"
license = "MIT"
repository = "https://github.com/jeiel85/minimal-zip-concept"
homepage = "https://github.com/jeiel85/minimal-zip-concept"
readme = "README.md"
keywords = ["compression", "context-mixing", "lz77", "tans", "archiver"]
categories = ["compression", "command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0"
rayon = "1.8"
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.12"
egui_plot = "0.26"
flate2 = "1.1.9"
zstd = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["tls"] }

