[package]
name = "mzc"
version = "0.12.0"
edition = "2021"
authors = ["Antigravity"]
description = "Minimal Zip Concept — Advanced lossless compressor & archiver in Rust with LZ77, RLE, tANS, Context Mixing, SIMD, and a premium egui desktop GUI"
license = "MIT"
repository = "https://github.com/jeiel85/minimal-zip-concept"
homepage = "https://github.com/jeiel85/minimal-zip-concept"
readme = "README.md"
keywords = ["compression", "context-mixing", "lz77", "tans", "archiver"]
categories = ["compression", "command-line-utilities"]
exclude = [
    "docs/**",
    "prompts/**",
    "samples/**",
    "AppxManifest.xml",
    ".github/**"
]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["sha2", "hmac"] }
rand = "0.8"
rpassword = "7.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.12"
egui_plot = "0.26"
ureq = { version = "2.9", features = ["tls"] }
rayon = "1.8"
flate2 = "1.1.9"
zstd = "0.13.3"

[build-dependencies]
embed-resource = "2.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "compression_bench"
harness = false

